Cleanup and fix errors