@@ -1,42 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>me.nithanim.filefragmentationanalysis</groupId>
-    <artifactId>FileFragmentationAnalysis</artifactId>
+    <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>FileFragmentationAnalysis-Common</name>
+    <parent>
+        <groupId>me.nithanim.filefragmentationanalysis</groupId>
+        <artifactId>root</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
         </dependency>
-        <!--<dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>FileFragmentationAnalysisNative</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <type>nar</type>
-        </dependency>-->
         <dependency>
             <groupId>me.nithanim.filefragmentationanalysis</groupId>
-            <artifactId>FileFragmentationAnalysisNative</artifactId>
+            <artifactId>native</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <optional>true</optional>
         </dependency>
-        <!--<dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>FileFragmentationAnalysisNative</artifactId>
-            <version>${project.version}</version>
-            <type>nar</type>
-            <classifier>amd64-Windows-gpp-jni</classifier>
-        </dependency>-->
-        <!--<dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>FragmentationStatisticsNative</artifactId>
-            <version>${project.version}</version>
-            <type>nar</type>
-            <classifier>amd64-Linux-gpp-jni</classifier>
-        </dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
@@ -94,7 +79,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>16</source>
                     <target>16</target>
@@ -105,49 +90,12 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.github.maven-nar</groupId>
-                <artifactId>nar-maven-plugin</artifactId>
-                <version>3.5.2</version>
-                <extensions>true</extensions>
-                <executions>
-                    <!--<execution>
-                        <goals>
-                            <goal>nar-download</goal>
-                            <goal>nar-unpack</goal>
-                        </goals>
-                    </execution>-->
-                    <execution>
-                        <!-- fix such that the extraction will be executed before resource inclusion -->
-                        <id>moveit</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>nar-assembly</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
-                    <linker>
-                        <name>g++</name>
-                    </linker>
+                    <argLine>--add-modules=jdk.incubator.foreign</argLine>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <!--<executions>
-                    <execution>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <arguments>
-                        <argument>-classpath</argument>
-                        <argument>%classpath;target/nar</argument>
-                    </arguments>
-                </configuration>-->
             </plugin>
         </plugins>
     </build>
@@ -190,8 +138,5 @@
     </profiles>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <nativesPackageVesion></nativesPackageVesion>
     </properties>
 </project>
